--- a/Views/MonsterEditorWindow.xaml
+++ b/Views/MonsterEditorWindow.xaml
@@ -77,6 +77,7 @@
 							<RowDefinition Height="*"/>
 							<RowDefinition Height="*"/>
 							<RowDefinition Height="*"/>
+							<RowDefinition Height="*"/>
 						</Grid.RowDefinitions>
 
 						<!--Core Set-->
@@ -86,7 +87,7 @@
 							<TextBlock Text="Core Set:" FontWeight="Bold" Foreground="White" Margin="0,4,4,0"/>
 						</StackPanel>
 						<RadioButton Click="monsterType_Click" Grid.Row="0" Grid.Column="1" x:Name="goblinScoutRB" Content="Goblin Scout x6" Foreground="White"/>
-						<RadioButton Click="monsterType_Click" Grid.Row="0" Grid.Column="2" x:Name="hillTrollRB" Content="Hill Troll x1" Foreground="White"/>
+						<RadioButton Click="monsterType_Click" Grid.Row="0" Grid.Column="2" x:Name="hillTrollRB" Content="Hill Troll" Foreground="White"/>
 						<RadioButton Click="monsterType_Click" Grid.Row="0" Grid.Column="3" x:Name="orcHunterRB" Content="Orc Hunter x3" Foreground="White"/>
 						<RadioButton Click="monsterType_Click" Grid.Row="0" Grid.Column="4" x:Name="orcMarauderRB" Content="Orc Marauder x3" Foreground="White"/>
 						<RadioButton Click="monsterType_Click" Grid.Row="1" Grid.Column="1" x:Name="ruffianRB" Content="Ruffian x6" Foreground="White"/>
@@ -99,9 +100,9 @@
 							<TextBlock Text="v" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 							<TextBlock Text="Villains of Eriador:" FontWeight="Bold" Foreground="White" Margin="0,4,4,0"/>
 						</StackPanel>
-						<RadioButton Click="monsterType_Click" Grid.Row="2" Grid.Column="1" x:Name="atarinRB" Content="Atarin x1" Foreground="White" />
-						<RadioButton Click="monsterType_Click" Grid.Row="2" Grid.Column="2" x:Name="coalfangRB" Content="Coalfang x1" Foreground="White" />
-						<RadioButton Click="monsterType_Click" Grid.Row="2" Grid.Column="3" x:Name="gulgotarRB" Content="Gulgotar x1" Foreground="White" />
+						<RadioButton Click="monsterType_Click" Grid.Row="2" Grid.Column="1" x:Name="atarinRB" Content="Atarin" Foreground="White" />
+						<RadioButton Click="monsterType_Click" Grid.Row="2" Grid.Column="2" x:Name="coalfangRB" Content="Coalfang" Foreground="White" />
+						<RadioButton Click="monsterType_Click" Grid.Row="2" Grid.Column="3" x:Name="gulgotarRB" Content="Gulgotar" Foreground="White" />
 
 						<!-- Shadowed Paths -->
 						<Rectangle Grid.Row="3" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="Black" />
@@ -109,24 +110,24 @@
 							<TextBlock Text="p" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 							<TextBlock Text="Shadowed Paths:" FontWeight="Bold" Foreground="White" Margin="0,4,4,0"/>
 						</StackPanel>
-						<RadioButton Click="monsterType_Click" Grid.Row="3" Grid.Column="1" x:Name="balrogRB" Content="Balrog x1" Foreground="White"/>
+						<RadioButton Click="monsterType_Click" Grid.Row="3" Grid.Column="1" x:Name="balrogRB" Content="Balrog" Foreground="White"/>
 						<RadioButton Click="monsterType_Click" Grid.Row="3" Grid.Column="2" x:Name="caveTrollRB" Content="Cave Troll x2" Foreground="White"/>
 						<RadioButton Click="monsterType_Click" Grid.Row="3" Grid.Column="3" x:Name="giantSpiderRB" Content="Giant Spider x6" Foreground="White"/>
 						<RadioButton Click="monsterType_Click" Grid.Row="3" Grid.Column="4" x:Name="namelessThingRB" Content="Nameless Thing x3" Foreground="White"/>
 						<RadioButton Click="monsterType_Click" Grid.Row="4" Grid.Column="1" x:Name="orcTaskmasterRB" Content="Orc Taskmaster x6" Foreground="White"/>
 						<RadioButton Click="monsterType_Click" Grid.Row="4" Grid.Column="2" x:Name="pitGoblinRB" Content="Pit Goblin x6" Foreground="White"/>
 						<RadioButton Click="monsterType_Click" Grid.Row="4" Grid.Column="3" x:Name="shadowmanRB" Content="Shadowman x3" Foreground="White"/>
-						<RadioButton Click="monsterType_Click" Grid.Row="4" Grid.Column="4" x:Name="spawnOfUngoliantRB" Content="Spawn of Ungoliant x1" Foreground="White"/>
+						<RadioButton Click="monsterType_Click" Grid.Row="4" Grid.Column="4" x:Name="spawnOfUngoliantRB" Content="Spawn of Ungoliant" Foreground="White"/>
 
 						<!-- Dwellers in Darkness -->
-						<Rectangle Grid.Row="5" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="Purple" />
+						<Rectangle Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="6" Fill="Purple" />
 						<StackPanel Orientation="Horizontal" Grid.Row="5" Grid.Column="0">
 							<TextBlock Text="d" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 							<TextBlock Text="Dwellers in Darkness:" FontWeight="Bold" Foreground="White" Margin="0,4,4,0"/>
 						</StackPanel>
-						<RadioButton Click="monsterType_Click" Grid.Row="5" Grid.Column="1" x:Name="ollieRB" Content="Ollie x1" Foreground="White"/>
-						<RadioButton Click="monsterType_Click" Grid.Row="5" Grid.Column="2" x:Name="ursaRB" Content="Ursa x1" Foreground="White"/>
-						<RadioButton Click="monsterType_Click" Grid.Row="5" Grid.Column="3" Grid.ColumnSpan="2" x:Name="supplicantOfMorgothRB" Content="Supplicant of Morgoth x1" Foreground="White"/>
+						<RadioButton Click="monsterType_Click" Grid.Row="5" Grid.Column="1" x:Name="ollieRB" Content="Ollie" Foreground="White"/>
+						<RadioButton Click="monsterType_Click" Grid.Row="5" Grid.Column="2" x:Name="ursaRB" Content="Ursa" Foreground="White"/>
+						<RadioButton Click="monsterType_Click" Grid.Row="5" Grid.Column="3" Grid.ColumnSpan="2" x:Name="supplicantOfMorgothRB" Content="Supplicant of Morgoth" Foreground="White"/>
 
 						<!-- Spreading War -->
 						<Rectangle Grid.Row="6" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="DarkRed" />
@@ -138,8 +139,20 @@
 						<RadioButton Click="monsterType_Click" Grid.Row="6" Grid.Column="2" x:Name="siegeEngineRB" Content="Siege Engine x2" Foreground="White"/>
 						<RadioButton Click="monsterType_Click" Grid.Row="6" Grid.Column="3" x:Name="soldierRB" Content="Soldier x6" Foreground="White"/>
 						<RadioButton Click="monsterType_Click" Grid.Row="6" Grid.Column="4" x:Name="urukWarriorRB" Content="Uruk Warrior x6" Foreground="White"/>
-						<RadioButton Click="monsterType_Click" Grid.Row="7" Grid.Column="1" x:Name="warOliphauntRB" Content="War Oliphaunt x1" Foreground="White"/>
+						<RadioButton Click="monsterType_Click" Grid.Row="7" Grid.Column="1" x:Name="warOliphauntRB" Content="War Oliphaunt" Foreground="White"/>
 						<RadioButton Click="monsterType_Click" Grid.Row="7" Grid.Column="2" x:Name="wargRiderRB" Content="Warg Rider x3" Foreground="White"/>
+
+						<!-- Scourges of the Wastes -->
+						<Rectangle Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="6" Fill="YellowGreen" />
+						<StackPanel Orientation="Horizontal" Grid.Row="8" Grid.Column="0">
+							<TextBlock Text="c" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
+							<TextBlock Text="Scourges" FontWeight="Bold" Foreground="White" Margin="0,4,0,0"/>
+							<TextBlock Text=" of the " FontWeight="Bold" Foreground="White" FontSize="9" VerticalAlignment="Center"/>
+							<TextBlock Text="Wastes:" FontWeight="Bold" Foreground="White" Margin="0,4,4,0"/>
+						</StackPanel>
+						<RadioButton Click="monsterType_Click" Grid.Row="8" Grid.Column="1" x:Name="lordAngonRB" Content="Lord Angon" Foreground="White"/>
+						<RadioButton Click="monsterType_Click" Grid.Row="8" Grid.Column="2" x:Name="eadrisRB" Content="Eadris" Foreground="White"/>
+						<RadioButton Click="monsterType_Click" Grid.Row="8" Grid.Column="3" Grid.ColumnSpan="2" x:Name="witchKingOfAngmarRB" Content="Witch-king of Angmar" Foreground="White"/>
 					</Grid>
 
 				</StackPanel>
