Scripted Monster screen incorporates Activations; Rename Activation UI text
-Rename "Activations" to Enemy Attack Group/Description in the UI text/titles
-Rearranged items on the Scripted Monster screen
-Added moveA and moveB instead of movementValue (moveA takes movementValue on startup if moveA is 0).
-Removed the Negated By ability options. These are handled by activations, or will be set to Random if activations aren't available.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -238,7 +238,7 @@
 
 
 				<Border BorderThickness="0,0,0,0" BorderBrush="Gray" Grid.Row="6">
-					<uc:SidebarListView x:Name="activationsUC" Margin="5" Title="Activations" ShowDuplicateButton="true" />
+					<uc:SidebarListView x:Name="activationsUC" Margin="5" Title="Enemy Attack Group" ShowDuplicateButton="true" />
 				</Border>
 
 			</Grid>
