--- a/Views/TokenEditorWindow.xaml
+++ b/Views/TokenEditorWindow.xaml
@@ -60,10 +60,10 @@
 					<Border Style="{StaticResource callout}" Background="{StaticResource bgColor}">
 						<StackPanel>
 							<TextBlock Text="Selected Tile" Style="{StaticResource Heading}" HorizontalAlignment="Center"/>
-							<TextBlock Text="{Binding hexTile.idNumber}" Style="{StaticResource SubText}" HorizontalAlignment="Center"/>
+							<TextBlock Text="{Binding tile.idNumber}" Style="{StaticResource SubText}" HorizontalAlignment="Center"/>
 
 							<TextBlock Text="Token Slots Available" Style="{StaticResource Heading}" HorizontalAlignment="Center"/>
-							<TextBlock Text="{Binding hexTile.tokenCount}" Style="{StaticResource SubText}" HorizontalAlignment="Center"/>
+							<TextBlock Text="{Binding tile.tokenCount}" Style="{StaticResource SubText}" HorizontalAlignment="Center"/>
 
 							<Button x:Name="addToken"  Background="DodgerBlue" Margin="0,10,0,0" Foreground="White" Click="addToken_Click" Height="36">
 								<StackPanel Orientation="Horizontal" Margin="5,0">
@@ -81,7 +81,7 @@
 											<ColumnDefinition Width="*"/>
 											<ColumnDefinition Width="auto"/>
 										</Grid.ColumnDefinitions>
-										<ComboBox Name="tokenCombo" VerticalAlignment="Center" Margin="0,5,0,0" ItemsSource="{Binding hexTile.tokenList}" SelectedValue="{Binding selected}" DisplayMemberPath="dataName" SelectionChanged="token_SelectionChanged"/>
+										<ComboBox Name="tokenCombo" VerticalAlignment="Center" Margin="0,5,0,0" ItemsSource="{Binding tile.tokenList}" SelectedValue="{Binding selected}" DisplayMemberPath="dataName" SelectionChanged="token_SelectionChanged"/>
 
 										<Button x:Name="removeToken" Grid.Column="1" Width="32" Background="{StaticResource bgCancelDelete}" Margin="5,0,0,0" DataContext="0" Click="removeToken_Click">
 											<Image Source="/JiME;component/Assets/cancel.png"/>
